# Lead_rs

./: Cargo.toml  README.md
scenes/: temp.xml
src/: common.rs  factory.rs  macros.rs  main.rs  parser.rs
src/accel/: aggregate.rs  bvh.rs  mod.rs  primitive.rs
src/camera/: environment_camera.rs  mod.rs  orthographic_camera.rs  perpective_camera.rs
src/film/: film.rs  film_tile.rs  mod.rs
src/filter/: filter_trait.rs  mitchell_filter.rs  mod.rs  sinc_filter.rs
src/geometry/: bounding_box.rs  frame.rs  mod.rs  normal.rs  transform.rs
src/impls/: bvh.rs  environment_camera.rs  interaction.rs  mod.rs  orthographic_camera.rs  perpective_camera.rs  scene.rs  sphere.rs  stratified_sampler.rs
src/integrator/: integrator.rs  mod.rs
src/light/: mod.rs
src/material/: bxdf.rs  fresnel.rs  lambertian_reflection.rs  mod.rs  specular_fresnel.rs  specular_reflection.rs  specular_transmission.rs
src/medium/: mod.rs
src/sampler/: mod.rs
src/scene/: mod.rs  scene.rs
src/shapes/: mod.rs
src/spectrum/: mod.rs  rgb_spectrum.rs  spectrum.rs
src/traits/: aggregate.rs  arealight.rs  camera.rs  filter.rs  global_sampler.rs  interaction.rs  lead_object.rs  medium.rs  mod.rs  pixel_sampler.rs  property_list.rs  sampler.rs  scene.rs  shape.rs
src/utils/: aggregate.rs  bounding_box.rs  box_filter.rs  film.rs  gaussian_filter.rs  image_writer.rs  interaction.rs  matrix.rs  mod.rs  normal.rs  normal3.rs  point.rs  point2.rs  point3.rs  primitive.rs  property_list.rs  ray.rs  rng.rs  solver.rs  transform.rs  triangle_filter.rs  vector.rs  vector2.rs  vector3.rs  (+2 more)
