[package]
name = "Lead"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
ctor = "0.1"
quick-xml = "0.37.2"
num-traits = "0.2"
derive_more = { version = "1", features = ["index", "index_mut"] }
rand = "0.8.5"
pcg_rand = "0.13.0"
atomic_float = "1.1.0"
exr = "1.73.0"

[profile.release]
lto = true